Refactor class NSGAIIStudy